--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -1,9 +1,7 @@
 /* GLOBAIS */
 
 * { margin: 0; padding: 0; }
-:root {
-    --orange: #ff6047;
-}
+:root { --orange: #ff6047; }
 .btn { border-radius: 4px; }
 .button-black { 
     background: #000;
@@ -34,13 +32,11 @@
 .button-transparent { border: 2px solid transparent; }
 .button-transparent:hover { border: 2px solid #000; }
 
-span.orange { color: var(--orange); }
+.text-orange { color: var(--orange); }
 
 /* FIM - GLOBAIS */
 
-header #logo span {
-    font-weight: 700 !important;
-}
+header #logo span { font-weight: 700 !important; }
 
 #logo-text { font-weight: 900; }
 
@@ -66,9 +62,7 @@ footer .social {
     justify-content: center;
 }
 
-#login #card, #cadastro #card {
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.150);
-}
+#login #card, #cadastro #card { box-shadow: 0 0 10px rgba(0, 0, 0, 0.150); }
 
 #login #card .col-img {
     background: url("../img/imglogin.png");
@@ -96,3 +90,36 @@ footer .social {
     width: 100px;
     box-shadow: 0 50px 0 0 var(--orange);
 }
+
+#cursos-bloco1 { background: var(--orange); }
+
+#cursos-bloco2 .card-cursos { background: #f5f5f5; }
+
+#cursos-bloco2 .card-content { height: 300px; }
+
+#cursos-bloco2 .card-image { 
+    height: 200px; 
+    object-fit: cover;
+    object-position: top;
+}
+
+#saude-mental-bloco1 { background: var(--orange); }
+#saude-mental-bloco2 .card-curso { background: #f5f5f5; }
+#saude-mental-bloco2 .card-content { height: 300px; }
+
+#relacionamentos-bloco1 { background: var(--orange); }
+#relacionamentos-bloco2 .card-curso { background: #f5f5f5; }
+#relacionamentos-bloco2 .card-content { height: 300px; }
+
+#manuseamento-do-tempo-bloco1 { background: var(--orange); }
+#manuseamento-do-tempo-bloco2 .card-curso { background: #f5f5f5; }
+#manuseamento-do-tempo-bloco2 .card-content { height: 300px; }
+
+#agenda-bloco1 {
+    background: url("../img/SEJA\ ATENDIDO.png");
+    height: 80vh;
+    background-size: cover;
+}
+
+#agenda-bloco2 .agenda-background { background: #f5f5f5; }
+#agenda-bloco2 span.checked { color: var(--orange); }
