--- a/frontend/assets/css/style.css
+++ b/frontend/assets/css/style.css
@@ -19,6 +19,15 @@ h1, h1, h3, h4, h5, h6, p, span { color: var(--black); }
     border: 2px solid var(--black);
 }
 .button-black:hover { border: 2px solid var(--black); }
+.button-gray { 
+    background: gray;
+    color: #fff;
+    border: 2px solid gray;
+}
+.button-gray:hover { 
+    border: 2px solid gray;
+    color: gray;
+}
 .button-green {
     background: var(--gren);
     color: #fff;
@@ -40,8 +49,15 @@ h1, h1, h3, h4, h5, h6, p, span { color: var(--black); }
 .button-black-outline {
     color: var(--black);
     border: 2px solid var(--black);
-    width: 100%;
     border-radius: 0;
+}
+.button-gray-outline {
+    color: gray;
+    border: 2px solid gray;
+}
+.button-gray-outline:hover {
+    background: gray;
+    color: #fff;
 }
 .button-black-outline:hover { 
     background: var(--black);
@@ -84,7 +100,7 @@ footer .social {
     justify-content: center;
 }
 
-#login #card, #cadastro #card { box-shadow: 0 0 10px rgba(0, 0, 0, 0.150); }
+#login #card, #cadastro #card, #perfil #card { box-shadow: 0 0 10px rgba(0, 0, 0, 0.150); }
 
 #login #card .col-img {
     background: url("../img/imglogin.png");
@@ -100,16 +116,17 @@ footer .social {
     border-radius: 0 0.375rem 0.375rem 0;
 }
 
-#login #card .return, #cadastro #card .return {  
-    font-weight: 700;
-    color: var(--orange);
-    font-size: 20px;
-}
-
 #login #card .title {
     border-radius: 10px;
     height: 5px;
     width: 100px;
+    box-shadow: 0 50px 0 0 var(--orange);
+}
+
+#cadastro #card .title {
+    border-radius: 10px;
+    height: 5px;
+    width: 160px;
     box-shadow: 0 50px 0 0 var(--orange);
 }
 
@@ -154,3 +171,5 @@ footer .social {
 #psicologo-bloco2 #lista-horarios li p { font-weight: 500; }
 
 #psicologo-bloco5 .card-content { height: 300px; }
+
+#perfil .perfil-button { margin-top: -30px; }
